[project]
name = "payment-system"
version = "1.0.0"
description = "Payment System API on FastAPI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "sqlalchemy==2.0.25",
    "asyncpg==0.31.0",
    "alembic==1.13.1",
    "python-dotenv==1.0.0",
    "passlib[bcrypt]==1.7.4",
    "python-jose[cryptography]==3.3.0",
    "pydantic==2.12.4",
    "pydantic-settings==2.1.0",
    "psycopg2-binary==2.9.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest==8.0.0",
    "pytest-asyncio==0.23.5",
    "httpx==0.26.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]